--- a/index.html
+++ b/index.html
@@ -2,10 +2,27 @@
 <html lang="kr">
 <head>
 	<meta charset="UTF-8">
-	<title>angular.js</title>
+	<title>AngularJS</title>
+	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.15/angular.min.js"></script>
+	<script src="lib/app.js"></script>
 </head>
-<body>
+<body ng-app="app">
+
 	
-	
+	<div class="container" ng-controller="ExampleCtrl">
+		<h1>AngularJS Code Example</h1>
+
+		<div ng-repeat="item in examples">
+			<h3><a href="src/{{item.name}}">{{item.name}}</a></h3>
+			<ul>
+				<li ng-repeat="file in item.children">
+					<a href="{{repo}}/blob/master/src/{{item.name}}/{{file.name}}">{{file.name}}</a>
+				</li>
+			</ul>
+		</div>
+
+	</div>
+
 </body>
 </html>
