--- a/index.html
+++ b/index.html
@@ -2,22 +2,27 @@
 <html lang="kr">
 <head>
 	<meta charset="UTF-8">
-	<title>AngularJS</title>
+	<title>AngularJS Examples</title>
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.15/angular.min.js"></script>
 	<script src="lib/app.js"></script>
+	<link rel="stylesheet" href="lib/style.css">
 </head>
 <body ng-app="app">
 
 	
 	<div class="container" ng-controller="ExampleCtrl">
-		<h1>AngularJS Code Example</h1>
 
+		<h1>AngularJS Code Examples</h1>
+		<p class="text-info">{{ examples.length }}개의 작은 예제들</p>
 		<div ng-repeat="item in examples">
-			<h3><a href="src/{{item.name}}">{{item.name}}</a></h3>
+			<h3><span class="glyphicon glyphicon-record"></span> <a href="src/{{item.name}}"  target="_blank" 
+				ng-class="{'text-muted strike':a.isClick}" ng-click="a.isClick=true" >{{item.name}}</a>
+			</h3>
 			<ul>
 				<li ng-repeat="file in item.children">
-					<a href="{{repo}}/blob/master/src/{{item.name}}/{{file.name}}">{{file.name}}</a>
+					<a href="{{sourceUrl}}/{{item.name}}/{{file.name}}" target="_blank" 
+						ng-class="{'text-muted strike':isClick}" ng-click="isClick=true">{{file.name}}</a>
 				</li>
 			</ul>
 		</div>
