--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<p class="text-info">{{ examples.length }}개의 작은 예제들</p>
 		<div ng-repeat="item in examples">
 			<h3><span class="glyphicon glyphicon-record"></span> <a href="src/{{item.name}}"  target="_blank" 
-				ng-class="{'text-muted strike':a.isClick}" ng-click="a.isClick=true" >{{item.name}}</a>
+				ng-class="{'text-muted strike':a.isClick}" ng-click="a,isClick=true" >{{item.name}}</a>
 			</h3>
 			<ul>
 				<li ng-repeat="file in item.children">
